[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Translate natural language prompts into structured function calls via constrained decoding."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic>=2",
    "llm-sdk",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
exclude = ['^llm_sdk/', '^\.venv/']
ignore_missing_imports = true
